@@ -95,8 +95,8 @@ public:
 
 	    conn->write(header);
 
-	    delete cn;
-	    cn = 0;
+	    //delete cn;
+	    //cn = 0;
 
 	    return; // done with looping
 	  }
@@ -135,8 +135,8 @@ public:
 	    assert(false && "should not come here");
 	  }
 
-	delete cn;
-	cn = 0;
+	//delete cn;
+	//cn = 0;
 
 	///@todo TK: conflicts and partial_ass leak here
 
